# ILX-AI-CLI

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  build_exe.py  install.py  main.py  pyproject.toml  requirements.txt  run.bat
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/core/: audit.py  benchmark.py  build_helper.py  config.py  cost_tracker.py  crash_db.py  diagnostics.py  error_classifier.py  exceptions.py  executor.py  file_converter.py  git_helper.py  hooks.py  hybrid_retriever.py  json_store.py  mcp_client.py  mcp_protocol.py  mcp_stdio.py  model_registry.py  notifications.py  ollama_guard.py  parallel_writer.py  permission_profiles.py  permissions.py  plugin_base.py  process_runner.py  project_memory.py  project_rules.py  rag.py  reflexion.py  repo_map.py  research_fetcher.py  research_runner.py  review_runner.py  route_engine.py  router.py  secret_store.py  semantic_rag.py  session_report.py  snapshot_store.py  (+11 more)
app/utils/: diff_parser.py  file_utils.py
cli/: app.py  app_helpers.py  chat_session.py  code_session.py  command_registry.py  context.py  debug_runner.py  diff_viewer.py  display.py  display_compat.py  entry.py  oneshot.py  plan_session.py  rich_display.py  session.py
cli/commands/: allowlist_cmds.py  audit_cmds.py  audit_helpers.py  audit_log_cmds.py  (+34 more)
docs/: ARCHITECTURE.md  BETA_LIMITATIONS.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_POSTS.md  MODEL_SUPPORT.md  PLAN.md  ROADMAP.md  SANDBOXING.md  USER_MANUAL.md  WHITEPAPER.md
prompts/: initial_prompt.txt  repair_prompt.txt
scripts/: check_version.py
tests/: conftest.py  result_store.py  run_tests.py  test_01_llm_connection.py  test_02_context_and_display.py  test_03_code_generation.py  test_04_settings_and_git.py  test_05_dev_tools.py  test_06_workspace_and_rules.py  test_07_new_dev_commands.py  test_08_mcp_and_scaffold.py  test_09_coding_agent_deep.py  test_10_agent_workflow.py  test_11_file_formats_and_system.py  test_12_user_tools.py  test_13_providers_and_tokens.py  test_14_process_management.py  test_15_scaffolding.py  test_16_tool_use.py  test_17_security.py  test_17b_security.py  test_18_security_audit.py  test_19_cost_and_rate_limits.py  test_20_audit.py  test_21_prompt_cache_and_tools.py  test_22_semantic_rag.py  test_23_streaming_agent.py  test_24_rich_display.py  test_25_vision.py  test_26_error_handling.py  test_27_reflexion.py  test_28_research_fetcher.py  test_29_docker.py  test_30_phase3_implementations.py  test_31_error_handling.py  test_32_p3_p4_features.py  test_33_cli_integration.py  test_34_permission_matrix.py  test_35_config_validation.py  test_36_architecture_fitness.py  (+25 more)
(+21 files in other folders)
